--- a/package.json
+++ b/package.json
@@ -5,8 +5,22 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
+        "carousel": "^0.0.3",
+        "daemonite-material": "^4.1.1",
+        "feather-icons": "^4.29.0",
+        "jquery": "^3.6.4",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.6",
+        "carousel": "^0.0.3",
+        "daemonite-material": "^4.1.1",
+        "feather-icons": "^4.29.0",
+        "jquery": "^3.6.4",
+        "perfect-scrollbar": "^1.5.5"
     }
 }
