--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "vite",
+        "start": "vite",
         "build": "vite build"
     },
     "devDependencies": {
