--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     laravel.test:
         build:
             context: ./vendor/laravel/sail/runtimes/8.2
-            dockerfile: Dockerfile
+            dockerfile: ../../../../../Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: sail-8.2/app
