--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Trading-Journal",
     "short_name": "LPT",
-    "start_url": "/index.php",
+    "start_url": "/layout.blade.php",
     "background_color": "#6777ef",
     "description": "Tutorial of Laravel Package",
     "display": "fullscreen",
