--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,13 +11,7 @@
             "src": "logo.png",
             "sizes": "512x512",
             "type": "image/png",
-            "purpose": "any maskable"
+            "purpose": "any"
         },
-        {
-            "src": "maskable_icon.png",
-            "sizes": "1024x1024",
-            "type": "image/png",
-            "purpose": "any maskable"
-        }
     ]
 }
