--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "riverskies/laravel-mobile-detect": "^1.3",
         "spatie/laravel-enum": "^3.0"
     },
     "require-dev": {
