first feature dashboard

--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "dependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.1.0",
+        "@vueform/multiselect": "^2.6.2",
         "block-ui": "^2.70.1",
+        "bootstrap-vue": "^2.23.1",
         "carousel": "^0.0.3",
+        "chart.js": "^4.2.1",
         "daemonite-material": "^4.1.1",
         "feather-icons": "^4.29.0",
         "jquery": "^3.6.4",
         "jquery.steps": "^1.1.4",
         "laravel-vue-pagination": "^4.1.0",
         "perfect-scrollbar": "^1.5.5",
-        "vue": "^3.2.47"
+        "vue": "^3.2.47",
+        "vue-chartjs": "^5.2.0"
     }
 }
