--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.1.0",
         "@vueform/multiselect": "^2.6.2",
+        "@vueform/toggle": "^2.1.3",
         "block-ui": "^2.70.1",
         "bootstrap-vue": "^2.23.1",
         "carousel": "^0.0.3",
