--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "riverskies/laravel-mobile-detect": "^1.3",
+        "spatie/laravel-cookie-consent": "^3.2",
         "spatie/laravel-enum": "^3.0"
     },
     "require-dev": {
