--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jquery.steps": "^1.1.4",
         "laravel-vue-pagination": "^4.1.0",
         "perfect-scrollbar": "^1.5.5",
+        "sweetalert2": "^11.7.23",
         "vue": "^3.2.47",
         "vue-chartjs": "^5.2.0"
     }
