--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@vitejs/plugin-vue": "^4.1.0",
         "@vueform/multiselect": "^2.6.2",
         "@vueform/toggle": "^2.1.3",
+        "@vuepic/vue-datepicker": "^6.0.1",
         "block-ui": "^2.70.1",
         "bootstrap-vue": "^2.23.1",
         "carousel": "^0.0.3",
