--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Trading-Journal",
+    "name": "Mon-Journal-Trading",
     "short_name": "LPT",
     "start_url": "index.php",
     "background_color": "#6777ef",
